--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-python-3.10.13
 streamlit
-tensorflow==2.17.1
+tensorflow==2.20.0
 numpy==1.26.4
 opencv-python-headless==4.11.0.86
-mediapipe==0.10.20
+pandas
 matplotlib
-pillow
+mediapipe==0.10.20
