--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-numpy
+streamlit==1.52.1
+tensorflow==2.20.0
+numpy>=1.26.0
 opencv-python-headless==4.11.0.86
-pandas
-matplotlib
+pandas==2.3.3
+matplotlib==3.10.8
+rich>=10.14.0
