--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 streamlit==1.52.1
-tensorflow==2.20.0
-numpy>=1.26.0
-pandas==2.3.3
+
+# ML core (STABLE)
+tensorflow==2.15.1
+keras==2.15.0
+numpy==1.26.4
+
+# Data & visualization
+pandas==2.2.3
+matplotlib==3.8.4
+
+# Image processing
 opencv-python-headless==4.11.0.86
-Pillow
-matplotlib==3.10.8
-rich>=10.14.0
+Pillow==10.4.0
+
+# UI / logging
+rich==13.9.4
