--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit==1.52.1
 
-# ML core (STABLE)
+# TensorFlow LTS (stable on Streamlit)
 tensorflow==2.15.1
 keras==2.15.0
 numpy==1.26.4
 
-# Data & visualization
+# Data & plotting
 pandas==2.2.3
 matplotlib==3.8.4
 
@@ -13,5 +13,5 @@ matplotlib==3.8.4
 opencv-python-headless==4.11.0.86
 Pillow==10.4.0
 
-# UI / logging
-rich==13.9.4
+# UI logging
+rich==14.2.0
