--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit==1.52.1
 tensorflow==2.20.0 
 numpy>=1.26.0
 pandas==2.3.3 
+mediapipe==0.10.20
 opencv-python-headless==4.11.0.86
 Pillow
 matplotlib==3.10.8 
