--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.52.1
-tensorflow==2.20.0 
+tensorflow==2.20.0
 numpy>=1.26.0
-pandas==2.3.3 
-mediapipe==0.10.20
+pandas==2.3.3
 opencv-python-headless==4.11.0.86
 Pillow
-matplotlib==3.10.8 
-rich>=10.14.0
+matplotlib==3.10.8
+mediapipe==0.10.20
+rich==13.7.1
